@@ -1,6 +1,8 @@
 === Version 0.2.5
 * Enhancements
   * #attach_to_window takes an optional block - will return to calling window after block executes
+  * Added the following instance methods to PageObject
+    * #button
   * Updated to use selenium-webdriver 2.4.0
   * Updated to use watir-webdriver 0.3.2
 
